stop layout breaking on blog index

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -95,6 +95,7 @@ a:hover{
 			margin-top:$blog-p-gap;
 			
 			p{
+				min-height:71px;
 				margin-top:0px;
 				margin-bottom:30px;
 			}
